# aginika-pcl-ros

./: CMakeLists.txt  aginika_pcl_nodelets.xml  package.xml
include/aginika_pcl_ros/: AllPassFilter.h  DIFFDOT_PCDFeature.h  Dot_PCDFeature.h  FPFH_Average_PCDFeature.h  FPFH_PCDFeature.h  GRAVDOT_PCDFeature.h  PCDFeatureProcedure.h  RandomRegionFilter.h  RandomSquareFilter.h  SHAPE_CONTEXT_PCDFeature.h  SHOT_PCDFeature.h  colorize_random_forest.h  colorize_random_forest2.h  l1_skeletonization.h  pointcloud_model_manager.h
launch/: extract_pcd_sample.launch  extract_pcd_sample_cluster.launch  l1_skeletonization.launch  passthrough_normal_record.launch  pcd_feature_sample.launch  plane_remove_normal_record.launch  plane_remove_pcd_saver.launch  plassthrough_normal_record.launch  random_forest_learn.launch  random_forest_server.launch  random_forest_server2.launch
launch/rviz/: colorized_random_forest_result.rviz  extract_pcd_sample.rviz
msg/: PointCloud2WithId.msg  TrackerInfo.msg  TrackerInfoArray.msg
sample/: pcd_feature_sample.cpp
scripts/: ploy_roc.py  random_forest_server.py  random_forests.py  random_forests2.py  random_forests3.py  random_forests4.py  random_forests5.py  random_forests6.py  random_forests_pkls.py  show_histogram.py  test.py
src/: AllPassFilter.cpp  DIFFDOT_PCDFeature.cpp  Dot_PCDFeature.cpp  FPFH_Average_PCDFeature.cpp  FPFH_PCDFeature.cpp  GRAVDOT_PCDFeature.cpp  PCDFeatureProcedure.cpp  RandomRegionFilter.cpp  RandomSquareFilter.cpp  SHAPE_CONTEXT_PCDFeature.cpp  SHOT_PCDFeature.cpp  colorize_random_forest_result.cpp  colorize_random_forest_result2.cpp  colorize_random_forest_result2_nodelet.cpp  colorize_random_forest_result_nodelet.cpp  concave_hull.cpp  generalized_icp_server.cpp  l1_skeletonization.cpp  multi_tracking_upgrade_manager.cpp  pointcloud_model_manager_nodelet.cpp  selected_pointcloud_saver.cpp  simple_mutable_model_tracking.cpp  simple_mutable_model_tracking_nodelet.cpp  simple_mutable_model_tracking_not_nodelet.cpp
srv/: ClassifyCloth.srv  ICPAlignReturn.srv  PointToContour.srv  PredictData.srv  SetFrameId.srv  SetMainObjectId.srv  SetMultiPointCloud2.srv  SetTrackerObjectId.srv  SetWorkingStateAndTopic.srv
